provider/crs-converter-azure/crs-converter-aks/istio/virtualservice-v2.yaml
# Copyright 2017-2019, Schlumberger
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crs-converter-aks
spec:
  hosts:
  - "*"
  gateways:
  - crs-converter-aks-gateway
  http:
  - match:
    - uri:
        prefix: /api/crs/converter
    route:
    - destination:
        host: crs-converter-aks
        port:
          number: 80
        subset: v2
